# ClassroomUtilities

./: .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.dev  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  ai.py  auth.py  rosters.py  seating.py  timers.py
backend/app/core/: __init__.py  config.py  ollama.py  security.py
docs/: TECHNICAL_SPEC.md
frontend/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/crypto/: index.ts
frontend/src/pages/: DashboardPage.tsx  HomePage.tsx  LoginPage.tsx  TimerPage.tsx
frontend/src/stores/: authStore.ts
